# adrecon-lite

./: README.md  pyproject.toml  writeup.md
adrecon/: __init__.py  __main__.py  cli.py  client.py  findings.py  output.py  uac.py
examples/: sample_records.json
screenshots/: sample-run.txt
tests/: test_findings.py  test_uac.py
