[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adrecon-lite"
version = "0.1.0"
description = "Lightweight Active Directory enumeration and dangerous-config detector"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "B0bTheSkull" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "ldap3>=2.9",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.1"]

[project.scripts]
adrecon = "adrecon.cli:main"

[project.urls]
Homepage = "https://github.com/B0bTheSkull/adrecon-lite"
Issues = "https://github.com/B0bTheSkull/adrecon-lite/issues"

[tool.setuptools.packages.find]
include = ["adrecon*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
